k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: algorithm-visualizer-service
  namespace: algorithm-visualizer
  labels:
    app: algorithm-visualizer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: algorithm-visualizer
